Chore add test functions (#2)
chore: add test functions

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,9 @@
   for = "/*"
   [headers.values]
     my-header = "netlify-rocks"
+
+[[redirects]]
+  force = true
+  from = "/foo/*"
+  status = 301
+  to = "/.netlify/functions/bar/?url=:splat"
